--- a/app/src/main/res/drawable/white_background3.xml
+++ b/app/src/main/res/drawable/white_background3.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 <item>
-    <shape android:shape="rectangle">
-        <corners android:radius="16dp"/>
+    <shape>
         <solid android:color="@color/white"/>
+        <corners android:bottomRightRadius="10dp"
+            android:bottomLeftRadius="10dp"/>
     </shape>
 </item>
 </selector>
