--- a/app/src/main/res/layout/activity_sp_pho_bien.xml
+++ b/app/src/main/res/layout/activity_sp_pho_bien.xml
@@ -56,9 +56,10 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rcvSPPhoBien_SPPB"
         android:layout_width="match_parent"
-        android:layout_height="700dp"
-        android:layout_margin="16dp"
-        android:layout_marginLeft="8dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="-2dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tIn"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
