--- a/app/src/main/res/layout/activity_yeu_thich.xml
+++ b/app/src/main/res/layout/activity_yeu_thich.xml
@@ -28,9 +28,9 @@
         android:id="@+id/rcvYeuThich_YT"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="-3dp"
+        android:layout_marginTop="10dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/textView"
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
