--- a/app/src/main/res/layout/item_spphobien.xml
+++ b/app/src/main/res/layout/item_spphobien.xml
@@ -50,6 +50,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="100.000VNĐ"
+        android:textColor="@color/black"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/shoe_name_SPPB"
         app:layout_constraintTop_toBottomOf="@+id/shoe_name_SPPB" />
