--- a/app/src/main/res/drawable/background.xml
+++ b/app/src/main/res/drawable/background.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 <item>
     <shape android:shape="rectangle">
-        <gradient  android:startColor="#20B1F8" android:endColor="#564CEB"/>
+        <gradient  android:startColor="#20B1F8" android:endColor="#20B1F8"/>
     </shape>
 </item>
 </selector>
