duy dung toi uu lai giao dien

--- a/app/src/main/res/layout/activity_chi_tiet_sp.xml
+++ b/app/src/main/res/layout/activity_chi_tiet_sp.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".Activity.Activity_ChiTietSP"
     android:layout_marginTop="10dp"
+    android:background="@color/white"
     >
 
     <!-- Nút Quay Lại -->
