--- a/app/src/main/res/layout/activity_yeu_thich.xml
+++ b/app/src/main/res/layout/activity_yeu_thich.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activity.Activity_YeuThich"
+    android:background="@color/white"
     >
 
 
@@ -14,7 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="120dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="35dp"
         android:layout_marginRight="120dp"
         android:text="Yêu thích"
         android:textColor="@color/black"
