--- a/app/src/main/res/layout/activity_capnhathoten.xml
+++ b/app/src/main/res/layout/activity_capnhathoten.xml
@@ -60,12 +60,13 @@
     <!-- Nút xác nhận -->
     <Button
         android:id="@+id/btnChangeName"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="280dp"
+        android:layout_height="60dp"
+        app:cornerRadius="10dp"
         android:text="Đổi họ tên"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="24dp"
-        android:backgroundTint="@android:color/holo_blue_light"
+        android:backgroundTint="@color/blue"
         android:textColor="@android:color/white"
         app:layout_constraintTop_toBottomOf="@id/edtNewName"
         app:layout_constraintStart_toStartOf="parent"
