--- a/app/src/main/res/layout/activity_cart.xml
+++ b/app/src/main/res/layout/activity_cart.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".Activity.Activity_Cart"
     android:layout_marginTop="25dp"
+    android:background="@color/white"
     >
 
 
