--- a/app/src/main/res/layout/activity_don_hang.xml
+++ b/app/src/main/res/layout/activity_don_hang.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activity.Activity_DonHang"
+    android:background="@color/white"
     android:layout_marginTop="10dp"
     >
 
