--- a/app/src/main/res/layout/activity_item_notification.xml
+++ b/app/src/main/res/layout/activity_item_notification.xml
@@ -11,6 +11,7 @@
         android:layout_height="wrap_content"
         android:text="Tiêu đề thông báo"
         android:textSize="16sp"
+        android:textColor="@color/black"
         android:textStyle="bold" />
 
     <TextView
