--- a/app/src/main/res/layout/activity_quen_mat_khau.xml
+++ b/app/src/main/res/layout/activity_quen_mat_khau.xml
@@ -7,53 +7,60 @@
     android:padding="15dp"
     android:background="@color/white"
     >
+
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_marginTop="30dp"
-        >
+        android:orientation="vertical">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="15dp"
             android:orientation="horizontal">
+
             <ImageButton
                 android:id="@+id/img_back"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_back"
-                android:background="@color/white" />
+                android:background="@color/white"
+                android:src="@drawable/ic_back" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_marginRight="20dp"
                 android:text="Quên mật khẩu"
                 android:textAlignment="center"
-                android:textSize="25sp"
-                android:layout_marginRight="20dp"
                 android:textColor="@color/blue"
-                android:textStyle="bold"/>
+                android:textSize="25sp"
+                android:textStyle="bold" />
         </LinearLayout>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="40dp"
             android:layout_marginBottom="10dp"
+            android:text="Nhập Email"
             android:textColor="@color/black"
             android:textSize="16sp"
-            android:textStyle="bold"
-            android:text="Nhập Email"/>
+            android:textStyle="bold" />
+
         <com.google.android.material.textfield.TextInputLayout
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
             android:layout_width="match_parent"
-            android:background="@drawable/edittext_background"
             android:layout_height="wrap_content"
-            app:boxCornerRadiusTopStart="16dp"
-            app:boxCornerRadiusTopEnd="16dp"
-            app:boxCornerRadiusBottomStart="16dp"
-            app:boxCornerRadiusBottomEnd="16dp"
+            android:background="@drawable/edittext_background"
             android:hint="Email"
+            app:boxCornerRadiusBottomEnd="16dp"
+            app:boxCornerRadiusBottomStart="16dp"
+            app:boxCornerRadiusTopEnd="16dp"
+            app:boxCornerRadiusTopStart="16dp"
             app:boxStrokeWidth="0dp">
+
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/ed_email"
                 android:layout_width="match_parent"
@@ -69,15 +76,18 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:visibility="gone" />
+
     <Button
         android:id="@+id/btn_send"
         android:layout_width="280dp"
         android:layout_height="60dp"
+        android:layout_below="@+id/linearLayout"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:text="Gửi"
-        app:cornerRadius="30dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="570dp"
         android:backgroundTint="@color/blue"
-        />
+        android:text="Gửi"
+        app:cornerRadius="10dp" />
 
 </RelativeLayout>
