--- a/app/src/main/res/layout/activity_show_list_location.xml
+++ b/app/src/main/res/layout/activity_show_list_location.xml
@@ -21,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_back"
-            android:background="@color/white"
+            android:background="?attr/selectableItemBackground"
             android:layout_marginTop="10dp"/>
         <TextView
             android:layout_marginLeft="30dp"
