--- a/app/src/main/res/layout/activity_ctdh_cho_xac_nhan.xml
+++ b/app/src/main/res/layout/activity_ctdh_cho_xac_nhan.xml
@@ -265,8 +265,10 @@
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/tvTCP"
                     android:layout_marginTop="16dp"
+                    app:cornerRadius="10dp"
                     android:text="Hủy Đơn Hàng"
                     android:textSize="20dp"
+                    android:backgroundTint="@color/blue"
                     />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
