--- a/app/src/main/res/layout/activity_manhinhnhanguima.xml
+++ b/app/src/main/res/layout/activity_manhinhnhanguima.xml
@@ -72,8 +72,9 @@
     <!-- Nút "Tiếp theo" -->
     <Button
         android:id="@+id/btnNext"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="280dp"
+        android:layout_height="50dp"
+        app:cornerRadius="10dp"
         android:text="Tiếp theo"
         android:textSize="18sp"
         app:layout_constraintTop_toBottomOf="@id/llEmailInput"
