--- a/app/src/main/res/layout/item_donhang.xml
+++ b/app/src/main/res/layout/item_donhang.xml
@@ -87,7 +87,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/tvTotal"
-                    android:text="Tổng cộng : "/>
+                    android:text="Tổng cộng : "
+                    android:textColor="#FF0000"
+                    />
 
                 <TextView
                     android:layout_width="match_parent"
