--- a/app/src/main/res/layout/item_spphobien.xml
+++ b/app/src/main/res/layout/item_spphobien.xml
@@ -7,7 +7,9 @@
     android:layout_margin="8dp"
     android:background="@drawable/grey_background"
     android:elevation="4dp"
-    app:cardElevation="8dp">
+    app:cardElevation="8dp"
+    android:padding="5dp"
+    >
 
     <ImageView
         android:id="@+id/shoe_image_SPPB"
@@ -36,21 +38,24 @@
 
     <TextView
         android:id="@+id/shoe_name_SPPB"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
         android:text="title"
         android:textColor="@color/black"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/view" />
+        android:maxLines="1"
+    android:ellipsize="end"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintTop_toTopOf="@+id/view" />
 
     <TextView
         android:id="@+id/shoe_price_SPPB"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="100.000VNĐ"
-        android:textColor="@color/black"
+        android:textColor="#FF0000"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="@+id/shoe_name_SPPB"
