--- a/app/src/main/res/layout/item_yeuthich.xml
+++ b/app/src/main/res/layout/item_yeuthich.xml
@@ -46,6 +46,8 @@
         app:layout_constraintTop_toTopOf="@+id/view" />
 
     <TextView
+        android:textStyle="bold"
+        android:textColor="#FF0000"
         android:id="@+id/shoe_price_YT"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
