--- a/doan/src/Famework/chat/index.scss
+++ b/doan/src/Famework/chat/index.scss
@@ -56,6 +56,8 @@
         display: flex;
         flex-direction: column;
         gap: 0.5rem;
+        max-height: 400px;
+        overflow-y: auto;
       }
   
       .chat-message {
@@ -65,7 +67,8 @@
         padding: 0.5rem;
         border-radius: 10px;
         margin-bottom: 0.5rem;
-  
+        word-wrap: break-word;
+        white-space: pre-wrap;
         &.sent {
           align-self: flex-end;
           background-color: #daf1da; /* Light green for admin */
