--- a/app/src/main/res/layout/activity_item_chat_admin_nhan.xml
+++ b/app/src/main/res/layout/activity_item_chat_admin_nhan.xml
@@ -11,30 +11,39 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginStart="16dp"
-    android:layout_marginEnd="8dp"
-    android:src="@drawable/logo1"
-    android:scaleType="centerCrop"
-    app:layout_constraintStart_toStartOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintBottom_toBottomOf="parent" />
+        android:layout_marginEnd="8dp"
+        android:src="@drawable/logo1"
+        android:scaleType="centerCrop"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <!-- Nội dung tin nhắn -->
+
+    <!-- Thời gian gửi tin nhắn -->
     <TextView
         android:id="@+id/textViewMessageReceived"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
         android:background="@drawable/message_background_received"
-        android:ellipsize="none"
         android:maxWidth="250dp"
-        android:minWidth="50dp"
         android:padding="12dp"
-        android:singleLine="false"
+        android:text="Nội dung tin nhắn"
         android:textColor="#FFFFFF"
         android:textSize="16sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.034"
+        app:layout_constraintHorizontal_bias="0.045"
         app:layout_constraintStart_toEndOf="@id/imageViewAdminAvatar"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textViewTimeReceived"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="18/12/2024, 01:36"
+        android:textSize="12sp"
+        android:textColor="#888888"
+        android:layout_marginTop="4dp"
+        app:layout_constraintTop_toBottomOf="@id/textViewMessageReceived"
+        app:layout_constraintStart_toStartOf="@id/textViewMessageReceived" />
 </androidx.constraintlayout.widget.ConstraintLayout>
