--- a/app/src/main/res/layout/activity_item_chat_message_khachhang.xml
+++ b/app/src/main/res/layout/activity_item_chat_message_khachhang.xml
@@ -6,33 +6,48 @@
     android:padding="8dp">
 
     <!-- Nội dung tin nhắn -->
+
+    <!-- Nút xóa -->
     <TextView
         android:id="@+id/textViewMessageSent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="12dp"
         android:background="@drawable/message_background_sent"
+        android:ellipsize="none"
+        android:maxWidth="250dp"
+        android:minWidth="50dp"
+        android:padding="12dp"
+        android:singleLine="false"
         android:textColor="#FFFFFF"
         android:textSize="16sp"
-        android:maxWidth="250dp"
-    android:minWidth="50dp"
-    android:ellipsize="none"
-    android:singleLine="false"
-    app:layout_constraintEnd_toStartOf="@id/buttonDeleteMessage"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/buttonDeleteMessage"
+        app:layout_constraintHorizontal_bias="0.967"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <!-- Nút xóa -->
     <ImageButton
         android:id="@+id/buttonDeleteMessage"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
         android:background="?attr/selectableItemBackground"
         android:contentDescription="Delete Message"
         android:src="@android:drawable/ic_menu_delete"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- Thời gian gửi tin nhắn -->
+    <TextView
+        android:id="@+id/textViewTimeSent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="18/12/2024, 01:36"
+        android:textSize="12sp"
+        android:textColor="#888888"
+        android:layout_marginTop="4dp"
+        app:layout_constraintTop_toBottomOf="@id/textViewMessageSent"
+        app:layout_constraintEnd_toEndOf="@id/buttonDeleteMessage" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
