--- a/app/src/main/res/layout/item_top_selling.xml
+++ b/app/src/main/res/layout/item_top_selling.xml
@@ -50,6 +50,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="100.000VNĐ"
+        android:textColor="#FF0000"
+        android:textStyle="bold"
         android:layout_marginStart="8dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/shoe_name_SPPB" />
