--- a/app/src/main/res/layout/activity_chi_tiet_sp.xml
+++ b/app/src/main/res/layout/activity_chi_tiet_sp.xml
@@ -166,8 +166,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="Đánh giá sản phẩm:"
+                android:text="Đánh giá sản phẩm :"
                 android:textSize="16sp"
+                android:textColor="@color/black"
                 android:textStyle="bold" />
 
             <!-- RecyclerView -->
