--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -74,7 +74,7 @@
 
         <!-- Ô tìm kiếm -->
         <EditText
-            android:id="@+id/editTextText"
+            android:id="@+id/edSearch"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="12dp"
